Fix popup CSS to align with the game area in different screen sizes

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -31,10 +31,10 @@ body {
 .game-area {
     background-color: #E6ECF0;
     box-sizing: border-box;
-    width: 80%;
+    width: 77%;
     height: 23rem;
     max-height: 23rem;
-    max-width: 830px;
+    max-width: 579px;
     margin-left: auto;
     margin-right: auto;
     position: relative;
@@ -51,23 +51,13 @@ body {
     cursor: pointer;
 }
 
-/* .popup-wrapper {
-    background: rgb(0, 0, 0, .5);
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    display: none;
-} */
-
 .popup {
     background-color: #445361;
     box-sizing: border-box;
-    width: 80%;
+    width: 37rem;
     height: 23rem;
     max-height: 23rem;
-    max-width: 100%;
+    max-width: 76%;
     margin-left: auto;
     margin-right: auto;
     top: 5rem;
@@ -77,7 +67,7 @@ body {
 
 .popup-content {
     color: #E6ECF0;
-    padding-top: 50%;
+    padding-top: 20%;
 }
 
 .button {
